# renting-in-vienna

./: .env.example  .gitignore  README.md  check_these.csv  pyproject.toml  update_readme.py
.github/workflows/: bot_test.yml  ci.yml  pipeline.yml  run_pipeline.yml  telegram_test.yml  update_kaggle.yml
listings/: rental_data.csv
scripts/: build_full_history.py  inspect_api.py
src/vienna_rentals/: __init__.py  cli.py  config.py  filtering.py  history.py  kaggle_export.py  kaggle_io.py  models.py  pipeline.py  readme.py  scraper.py  storage.py  telegram.py  transform.py
tests/: test_config.py  test_filtering.py  test_history.py  test_kaggle_export.py  test_kaggle_io.py  test_models.py  test_pipeline.py  test_storage.py  test_telegram.py  test_transform.py
