[project]
name = "vienna-rentals"
version = "1.0.0"
description = "Scrape Vienna rental listings from willhaben, notify via Telegram, and publish to Kaggle."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.2.3",
    "pandas>=2.2",
    "requests>=2.32",
    "tabulate>=0.9",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.0",
]

[project.scripts]
vienna-rentals = "vienna_rentals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vienna_rentals"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RET", "RUF"]
