[project]
name = "vienna-rentals"
version = "2.0.0"
description = "Stateless pipeline: scrape Vienna rental listings from willhaben, deduplicate against a private Kaggle history, publish to Kaggle, and notify via Telegram."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.2.3",
    "pandas>=2.2",
    "requests>=2.32",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.0",
]

[project.scripts]
vienna-rentals = "vienna_rentals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vienna_rentals"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE", "RET", "RUF"]
